## Process this file with automake to produce Makefile.in


bin_PROGRAMS =  \
	datetime_test \
	sse_test \
	circle_test

datetime_test_SOURCES =  \
	datetime_test.cc \
	../common/datetime.h \
	../common/datetime.cpp

sse_test_SOURCES =  \
	sse_test.cc \
	../common/vectors.h \
	../common/vectors.cpp

circle_test_SOURCES =  \
	circle_test.cc \
	../common/circle.h
